# markforge

./: .dockerignore  .gitignore  .prettierrc  README.md  SPEC.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
docker/: Dockerfile.debian-12  Dockerfile.ubuntu-24.04
docs/: CNAME  index.html  latest.json  styles.css
e2e/: app.spec.ts  helpers.ts  screenshot.mjs
github-pages/: CNAME  README.md
scripts/: build-linux-packages.ps1  build-windows-package.ps1  bump-version.ps1  make-update-manifest.ps1  publish-release.ps1  release.ps1  update-website.ps1  verify-updater.ps1
scripts/install-tests/: test-appimage.sh  test-deb.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  files.rs  mod.rs  recovery.rs  search.rs  settings.rs  system.rs  workspace.rs
src-tauri/src/models/: errors.rs  export.rs  files.rs  mod.rs  settings.rs  workspace.rs
src-tauri/src/security/: mod.rs  path_guard.rs
src-tauri/src/services/: export_service.rs  file_service.rs  mod.rs  recovery_service.rs  search_service.rs  settings_service.rs  workspace_service.rs
src/lib/: session.ts  snippets.ts  templates.ts  types.ts  updater.ts
src/lib/commands/: keymap.ts  (+5 more)
src/state/: appStore.ts  documentStore.test.ts  documentStore.ts  settingsStore.ts  workspaceStore.ts
src/styles/: globals.css  preview-themes.css
src/test/: setup.ts
(+54 files in other folders)
